--- a/Pytorch/basic/02_data_calculation.ipynb
+++ b/Pytorch/basic/02_data_calculation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "041a2f05",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "698408c9",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "'1.13.1+cpu'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,20 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f6f835c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-2.7260,  0.4783, -0.2906,  0.4397,  0.9391],\n",
-       "        [-2.0382, -1.1389,  0.8143, -0.0686, -0.3839],\n",
-       "        [-0.3889, -1.8110,  0.5220, -0.7152, -1.1229],\n",
-       "        [ 0.6399, -0.0161,  1.9484,  0.6155, -1.3006]])"
+       "tensor([[ 0.5544,  0.3945,  0.7134, -0.9825,  2.3436],\n",
+       "        [ 1.5518,  0.3083,  0.5637, -1.1906,  0.8133],\n",
+       "        [ 0.6354,  1.1493,  0.2742,  0.6630,  0.4845],\n",
+       "        [-1.5488, -0.0314,  1.7406,  0.3260, -0.6287]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "791840d1",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.9484)\n"
+      "tensor(2.3436)\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "618818ab",
    "metadata": {},
    "outputs": [
@@ -105,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.6399, 0.4783, 1.9484, 0.6155, 0.9391])\n",
-      "tensor([3, 0, 3, 3, 0])\n"
+      "tensor([1.5518, 1.1493, 1.7406, 0.6630, 2.3436])\n",
+      "tensor([1, 2, 3, 2, 0])\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8d7f51f6",
    "metadata": {},
    "outputs": [
@@ -127,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.6399, 0.4783, 1.9484, 0.6155, 0.9391])\n",
-      "tensor([3, 0, 3, 3, 0])\n"
+      "tensor([1.5518, 1.1493, 1.7406, 0.6630, 2.3436])\n",
+      "tensor([1, 2, 3, 2, 0])\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "63579476",
    "metadata": {},
    "outputs": [
@@ -149,9 +149,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.6399, 0.4783, 1.9484, 0.6155, 0.9391])\n",
-      "tensor([3, 0, 3, 3, 0])\n",
-      "(tensor([0.6399, 0.4783, 1.9484, 0.6155, 0.9391]), tensor([3, 0, 3, 3, 0]))\n"
+      "tensor([1.5518, 1.1493, 1.7406, 0.6630, 2.3436])\n",
+      "tensor([1, 2, 3, 2, 0])\n",
+      "(tensor([1.5518, 1.1493, 1.7406, 0.6630, 2.3436]), tensor([1, 2, 3, 2, 0]))\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dcbbf273",
    "metadata": {},
    "outputs": [
@@ -195,8 +195,8 @@
       "        [0., 0., 0.]])\n",
       "\n",
       "隨機矩陣:\n",
-      "tensor([[0.1626, 0.2041, 0.9784],\n",
-      "        [0.9071, 0.6297, 0.7966]])\n",
+      "tensor([[0.3339, 0.6048, 0.4548],\n",
+      "        [0.2829, 0.2104, 0.6105]])\n",
       "\n",
       "由數據構造的 Tensor:\n",
       "tensor([[1, 2, 5],\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d225883b",
    "metadata": {},
    "outputs": [
@@ -236,12 +236,12 @@
      "text": [
       "\n",
       "Tensor 加法結果:\n",
-      "tensor([[1.1626, 2.2041, 5.9784],\n",
-      "        [3.9071, 4.6297, 7.7966]])\n",
+      "tensor([[1.3339, 2.6048, 5.4548],\n",
+      "        [3.2829, 4.2104, 7.6105]])\n",
       "\n",
       "Tensor 乘法結果:\n",
-      "tensor([[0.1626, 0.4083, 4.8919],\n",
-      "        [2.7213, 2.5188, 5.5760]])\n",
+      "tensor([[0.3339, 1.2097, 2.2739],\n",
+      "        [0.8486, 0.8415, 4.2738]])\n",
       "\n",
       "重塑後的 Tensor:\n",
       "tensor([[1, 2, 5, 3, 4, 7]])\n"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "baedb5a0",
    "metadata": {},
    "outputs": [
@@ -330,14 +330,28 @@
    "id": "d62112eb",
    "metadata": {},
    "source": [
-    "看起來```torch.matmul```和```torch.mm```都是進行矩陣內積運算，那```torch.matmul```和```torch.mm```有沒有什麼差異?\n",
+    "# torch.matmul 與 torch.mm 的差異\n",
     "\n",
-    "```torch.mm```就是一般我們高中數學學的矩陣相乘，```torch.mm(a,b)```的情況，矩陣/向量$a$要能跟矩陣/向量$b$對上<br>\n",
-    "$$a\\in R^{(m\\times n)}, b\\in R^{(n\\times k)}，torch.mm(a,b)\\in R^{(m\\times k)}$$\n",
+    "在 PyTorch 中，`torch.matmul` 和 `torch.mm` 都用於執行矩陣內積運算，但它們在功能和應用場景上存在一定的差異。\n",
     "\n",
-    "```torch.matmul```: 除了一般的矩陣內積運算外，他可以達到Python內建廣播運算，叫做broadcasted運算，當兩個tensor的dimension是broadcasted，使用它時候會很有趣。<br>\n",
-    "假設tensor a: $(i\\times 1\\times n\\times m)$ 和 tnesor b: $(k\\times m\\times p)$<br>\n",
-    "torch.matmul(a,b) = $(i\\times k\\times n\\times p)$"
+    "## torch.mm\n",
+    "\n",
+    "- `torch.mm` 執行的是標準的矩陣乘法運算。\n",
+    "- 用法: `torch.mm(a, b)`，其中 `a` 和 `b` 是矩陣。\n",
+    "- 約束: 矩陣 `a` 的列數必須與矩陣 `b` 的行數相同。\n",
+    "- 維度要求: 如果矩陣 `a` 是 \\(m \\times n\\)，矩陣 `b` 是 \\(n \\times k\\)，則結果矩陣將是 \\(m \\times k\\)。\n",
+    "- 例子: 若 `a` ∈ \\(R^{m \\times n}\\) 且 `b` ∈ \\(R^{n \\times k}\\)，則 `torch.mm(a, b)` ∈ \\(R^{m \\times k}\\)。\n",
+    "\n",
+    "## torch.matmul\n",
+    "\n",
+    "- `torch.matmul` 提供了更廣泛的矩陣乘法運算，包括標準矩陣乘法、點乘以及維度廣播。\n",
+    "- 廣播運算: `torch.matmul` 支持廣播運算，能夠自動擴展維度以適應矩陣運算的需求。\n",
+    "- 維度要求: 對於高維張量，`torch.matmul` 可以處理形如 \\(i \\times 1 \\times n \\times m\\) 和 \\(k \\times m \\times p\\) 的張量，並輸出形為 \\(i \\times k \\times n \\times p\\) 的張量。\n",
+    "- 靈活性: `torch.matmul` 在處理不同維度張量時提供了更大的靈活性和應用範圍。\n",
+    "\n",
+    "## 總結\n",
+    "\n",
+    "雖然 `torch.mm` 和 `torch.matmul` 都可用於矩陣乘法，但 `torch.matmul` 提供了更廣泛的功能，特別是在處理高維數據和需要廣播功能的場景中。選擇使用哪一個函數，應根據具體的應用需求和矩陣的維度來決定。\n"
    ]
   },
   {
@@ -350,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d8dec2db",
    "metadata": {},
    "outputs": [
@@ -410,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1728ae22",
    "metadata": {},
    "outputs": [
@@ -470,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9e90badc",
    "metadata": {},
    "outputs": [
@@ -481,9 +495,15 @@
       "a: torch.Size([100, 5, 10])\n",
       "b: torch.Size([200, 1, 10, 20])\n",
       "a * b: torch.Size([200, 100, 5, 20])\n",
-      "計算時間: 0.0660 seconds\n",
-      "計算時間: 2.4513 seconds\n",
-      "速度差異 37.14 倍\n",
+      "計算時間: 0.0437 seconds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "計算時間: 1.2920 seconds\n",
+      "速度差異 29.60 倍\n",
       "差異總和: 0.0\n"
      ]
     }
@@ -528,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cc40dda8",
    "metadata": {},
    "outputs": [
@@ -539,9 +559,9 @@
       "a: (100, 5, 10)\n",
       "b: (200, 1, 10, 20)\n",
       "a * b: (200, 100, 5, 20)\n",
-      "計算時間: 0.0311 seconds\n",
-      "計算時間: 0.2624 seconds\n",
-      "速度差異 8.44 倍\n",
+      "計算時間: 0.0161 seconds\n",
+      "計算時間: 0.1454 seconds\n",
+      "速度差異 9.00 倍\n",
       "差異總和: 0.0\n"
      ]
     }
@@ -585,28 +605,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d7d6e5a",
+   "metadata": {},
+   "source": [
+    "# 線性代數運算操作比較 (Torch vs Numpy)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "daf23f39",
    "metadata": {},
    "source": [
-    "### 線性代數函數庫 (Torch vs Numpy)"
+    "### 常見線性代數操作比較 (Torch vs Numpy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ae976b68",
+   "execution_count": 16,
+   "id": "544bf161",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numpy array\n",
-      " [[6. 2.]\n",
+      "[[6. 2.]\n",
       " [4. 5.]]\n",
-      "torch array\n",
-      " tensor([[6., 2.],\n",
-      "        [4., 5.]], dtype=torch.float64)\n"
+      "tensor([[6., 2.],\n",
+      "        [4., 5.]])\n"
      ]
     }
    ],
@@ -614,67 +641,269 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
+    "# 給定的 NumPy 陣列和 PyTorch 張量\n",
     "a_np = np.array([[6.0, 2.0],\n",
     "                 [4.0, 5.0]])\n",
-    "a_torch = torch.tensor(a_np)\n",
+    "a_torch = torch.tensor(a_np, dtype=torch.float)\n",
     "\n",
+    "print(a_np)\n",
     "\n",
-    "print(\"numpy array\\n\", a_np)\n",
-    "\n",
-    "print(\"torch array\\n\", a_torch)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "68ffdd56",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.0\n",
-      "tensor(9., dtype=torch.float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# normalization\n",
-    "print(np.linalg.norm(a_np))\n",
-    "print(torch.linalg.norm(a_torch))"
+    "print(a_torch)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c06ad5b4",
+   "id": "32cfbbe3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.22727273 -0.09090909]\n",
-      " [-0.18181818  0.27272727]]\n",
-      "tensor([[ 0.2273, -0.0909],\n",
-      "        [-0.1818,  0.2727]], dtype=torch.float64)\n"
+      "NumPy Transposed:\n",
+      " [[6. 4.]\n",
+      " [2. 5.]]\n",
+      "PyTorch Transposed:\n",
+      " tensor([[6., 4.],\n",
+      "        [2., 5.]])\n"
      ]
     }
    ],
    "source": [
-    "#\n",
-    "print(np.linalg.inv(a_np))\n",
-    "print(torch.linalg.inv(a_torch))"
+    "# 1. 矩陣轉置\n",
+    "a_np_transposed = a_np.T\n",
+    "a_torch_transposed = a_torch.t()\n",
+    "\n",
+    "print(\"NumPy Transposed:\\n\", a_np_transposed)\n",
+    "print(\"PyTorch Transposed:\\n\", a_torch_transposed)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3916798e",
+   "execution_count": 18,
+   "id": "7584ddaf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Matrix Multiplication:\n",
+      " [[40. 34.]\n",
+      " [34. 41.]]\n",
+      "PyTorch Matrix Multiplication:\n",
+      " tensor([[40., 34.],\n",
+      "        [34., 41.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 矩陣乘法 (以自身為例)\n",
+    "a_np_mult = np.dot(a_np, a_np_transposed)\n",
+    "a_torch_mult = torch.mm(a_torch, a_torch_transposed)\n",
+    "\n",
+    "print(\"NumPy Matrix Multiplication:\\n\", a_np_mult)\n",
+    "print(\"PyTorch Matrix Multiplication:\\n\", a_torch_mult)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2ec28ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Inverse:\n",
+      " [[ 0.22727273 -0.09090909]\n",
+      " [-0.18181818  0.27272727]]\n",
+      "PyTorch Inverse:\n",
+      " tensor([[ 0.2273, -0.0909],\n",
+      "        [-0.1818,  0.2727]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 求逆矩陣 (注意: 僅當矩陣可逆時有效)\n",
+    "a_np_inverse = np.linalg.inv(a_np)\n",
+    "a_torch_inverse = torch.inverse(a_torch)\n",
+    "\n",
+    "print(\"NumPy Inverse:\\n\", a_np_inverse)\n",
+    "print(\"PyTorch Inverse:\\n\", a_torch_inverse)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "37b581da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Determinant: 22.000000000000004\n",
+      "PyTorch Determinant: tensor(22.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. 行列式計算\n",
+    "a_np_det = np.linalg.det(a_np)\n",
+    "a_torch_det = torch.det(a_torch)\n",
+    "\n",
+    "print(\"NumPy Determinant:\", a_np_det)\n",
+    "print(\"PyTorch Determinant:\", a_torch_det)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "756784c5",
+   "metadata": {},
+   "source": [
+    "## 向量範數計算類型\n",
+    "\n",
+    "在線性代數中，「範數」是用於衡量向量大小的一種重要概念。本指南旨在為程式設計初學者提供關於不同範數計算方法的清晰解釋，包括 1-範數、2-範數、無窮範數，以及 p-範數。以下是各種範數的定義及其計算方法。\n",
+    "\n",
+    "## 1. 1-範數 (L1 Norm)\n",
+    "\n",
+    "1-範數，也稱為「曼哈頓距離」，是向量中各元素絕對值的總和。\n",
+    "\n",
+    "- **計算公式：**\n",
+    "\n",
+    "  $$\n",
+    "  \\|x\\|_1 = \\sum_{i=1}^{n} |x_i|\n",
+    "  $$\n",
+    "\n",
+    "## 2. 2-範數 (L2 Norm)\n",
+    "\n",
+    "2-範數，亦即「歐幾里得範數」，是向量中各元素平方和的平方根。\n",
+    "\n",
+    "- **計算公式：**\n",
+    "\n",
+    "  $$\n",
+    "  \\|x\\|_2 = \\sqrt{\\sum_{i=1}^{n} x_i^2}\n",
+    "  $$\n",
+    "\n",
+    "## 3. 無窮範數 (L∞ Norm)\n",
+    "\n",
+    "無窮範數是向量中的最大絕對值。\n",
+    "\n",
+    "- **計算公式：**\n",
+    "\n",
+    "  $$\n",
+    "  \\|x\\|_\\infty = \\max_i |x_i|\n",
+    "  $$\n",
+    "\n",
+    "## 4. p-範數 (Lp Norm)\n",
+    "\n",
+    "p-範數是一個泛化的範數形式，適用於當 \\(p \\geq 1\\) 時。\n",
+    "\n",
+    "- **計算公式：**\n",
+    "\n",
+    "  $$\n",
+    "  \\|x\\|_p = \\left(\\sum_{i=1}^{n} |x_i|^p\\right)^{\\frac{1}{p}}\n",
+    "  $$\n",
+    "\n",
+    "範數在數學、物理學和工程學中扮演著關鍵角色。在機器學習領域，L1範數有助於促進模型的稀疏性，而L2範數常用於防止過擬合，也就是所謂的「L2正則化」。根據您的具體需求選擇合適的範數來進行計算。\n",
+    "\n",
+    "希望本指南能夠幫助您更好地理解和計算各種向量範數。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e0717f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6. 2.]\n",
+      " [4. 5.]]\n",
+      "tensor([[6., 2.],\n",
+      "        [4., 5.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "# 給定的 NumPy 陣列和 PyTorch 張量\n",
+    "a_np = np.array([[6.0, 2.0],\n",
+    "                 [4.0, 5.0]])\n",
+    "a_torch = torch.tensor(a_np, dtype=torch.float)\n",
+    "\n",
+    "print(a_np)\n",
+    "\n",
+    "print(a_torch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8f9d964e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy L1範數: 10.0\n",
+      "NumPy L2範數: 9.0\n",
+      "PyTorch L1範數: tensor(17., dtype=torch.float64)\n",
+      "PyTorch L2範數: tensor(9., dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NumPy 計算範數\n",
+    "# 在 NumPy 的 np.linalg.norm 函數中，指定 ord=1 會計算矩陣的列和的最大值（即按列求絕對值之和的最大值）\n",
+    "l1_norm_np = np.linalg.norm(a_np, ord=1)  # L1範數\n",
+    "l2_norm_np = np.linalg.norm(a_np)  # L2範數，預設為ord=2\n",
+    "\n",
+    "# PyTorch 計算範數\n",
+    "l1_norm_torch = torch.norm(a_torch, p=1)  # L1範數\n",
+    "l2_norm_torch = torch.norm(a_torch)  # L2範數，預設為p=2\n",
+    "\n",
+    "print(\"NumPy L1範數:\", l1_norm_np)\n",
+    "print(\"NumPy L2範數:\", l2_norm_np)\n",
+    "print(\"PyTorch L1範數:\", l1_norm_torch)\n",
+    "print(\"PyTorch L2範數:\", l2_norm_torch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "819109b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy L1範數（所有元素絕對值之和）: 17.0\n",
+      "PyTorch L1範數（所有元素絕對值之和）: 17.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用 NumPy 計算所有元素的絕對值之和\n",
+    "l1_norm_np = np.sum(np.abs(a_np))\n",
+    "\n",
+    "# 使用 PyTorch 計算所有元素的絕對值之和\n",
+    "l1_norm_torch = torch.sum(torch.abs(a_torch))\n",
+    "\n",
+    "print(\"NumPy L1範數（所有元素絕對值之和）:\", l1_norm_np)\n",
+    "print(\"PyTorch L1範數（所有元素絕對值之和）:\", l1_norm_torch.item())  # 使用 .item() 將單元素張量轉換為Python數值\n"
+   ]
   }
  ],
  "metadata": {
