--- a/Pytorch/basic/07_pytorch_Gradient.ipynb
+++ b/Pytorch/basic/07_pytorch_Gradient.ipynb
@@ -370,10 +370,11 @@
     "    print(x.data)\n",
     "    print('第{}次梯度:{}'.format(i+1, x.grad))\n",
     "\n",
-    "    x.data = x.data -0.1*x.grad # 更新參數 x\n",
+    "    x.data = x.data -0.1*x.grad # 更新參數 x \n",
     "    print('第{}次更新後結果:{}'.format(i+1, x.data))\n",
     "\n",
-    "    x.grad.zero_() # 清空梯度，準備進行下一輪更梯度更新"
+    "    x.grad.zero_() # 清空梯度，準備進行下一輪更梯度更新\n",
+    "\n"
    ]
   },
   {
@@ -655,7 +656,9 @@
     "    ani.save(\"grad_simple_v2_lr({}).gif\".format(lr),writer='pillow')\n",
     "\n",
     "    plt.close()\n",
-    "    print('Done')\n"
+    "    print('Done')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -962,7 +965,9 @@
     "$$     \n",
     "</font>   \n",
     "\n",
-    "Note:梯度不歸零不一定是用累積的方式，也能用平均的方式進行梯度融合。"
+    "Note:梯度不歸零不一定是用累積的方式，也能用平均的方式進行梯度融合。\n",
+    "\n",
+    "\n"
    ]
   },
   {
