--- a/Pytorch/basic/11_pytorch_cv_scratch_model.ipynb
+++ b/Pytorch/basic/11_pytorch_cv_scratch_model.ipynb
@@ -518,7 +518,7 @@
     "\n",
     "# 2.宣告 dataset和dataloader\n",
     "# training data\n",
-    "dataset_train = datasets.CIFAR10(root='./dataset', train=True,  download=True, transform=mytransform)\n",
+    "dataset_train = datasets.CIFAR10(root='./dataset/CIFAR10/', train=True,  download=True, transform=mytransform)\n",
     "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=n_batch, num_workers=0, shuffle=True)\n",
     "# testing data\n",
     "testset = datasets.CIFAR10(root='./dataset/CIFAR10/', train=False, download=True, transform=mytransform)\n",
