--- a/Pytorch/basic/03_data_transforms.ipynb
+++ b/Pytorch/basic/03_data_transforms.ipynb
@@ -80,7 +80,7 @@
         "cv_img = cv2.imread(img_path)\n",
         "writer = SummaryWriter(\"logs\")\n",
         "\n",
-        "#1 transforms 這如何使用 (python)\n",
+        "#1 transforms 這如何使用 (python)--\n",
         "tensor_trans = transforms.ToTensor()\n",
         "tensor_img = tensor_trans(img)\n",
         "\n",
