--- a/Pytorch/application/nlp/Transfermer_中英文翻譯/inference.ipynb
+++ b/Pytorch/application/nlp/Transfermer_中英文翻譯/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "44d3e531",
    "metadata": {},
    "outputs": [
@@ -174,26 +174,25 @@
     "                predictions.append(word)\n",
     "                decoder_input =torch.tensor([[w_index]])\n",
     "            return \"\".join(predictions)\n",
-    "        \n"
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "421f91f3",
+   "metadata": {},
+   "source": [
+    "## inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "b6212203",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -224,6 +223,27 @@
     "#             print(word[0])\n",
     "    return \"\".join(predictions)\n",
     "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "73568566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "device = torch.device(\"cpu\")\n",
     "\n",
@@ -238,13 +258,14 @@
     "               decoder_embedding_size, hidden_size, cn_tokenizer.length(),\n",
     "               dropout_rate=0.1)\n",
     "\n",
+    "# 把之前訓練好的參數載入模型\n",
     "model_weight = torch.load('model_seq2seq.pth', map_location=device)\n",
-    "model.load_state_dict(model_weight.state_dict())\n"
+    "model.load_state_dict(model_weight.state_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "e7bfef26",
    "metadata": {},
    "outputs": [
@@ -257,19 +278,19 @@
       "輸出:你好嗎？<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I am fine\n",
-      "輸出:我哪支来自行车吗？<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:我好像在一起之前呢。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:Check, please.\n",
       "輸出:請結帳。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I love you.\n",
-      "輸出:我爱你。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:我愛你。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:She studied English in the morning.\n",
-      "輸出:她上午學習英語。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:她在上午學習英語。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I'm pretty well.\n",
-      "輸出:我很好。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n"
+      "輸出:我身体很好。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n"
      ]
     }
    ],
@@ -317,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
