--- a/Tensorflow/GPU_tensorflow.ipynb
+++ b/Tensorflow/GPU_tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -25,18 +25,20 @@
     "'''\n",
     "\n",
     "\n",
-    "\n",
     "# Check TensorFlow version\n",
     "print(\"TensorFlow version:\", tf.__version__)\n",
     "\n",
     "# List available GPUs\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
     "\n",
+    "\n",
     "if gpus:\n",
     "    for gpu in gpus:\n",
     "        print(\"GPU found:\", gpu)\n",
     "else:\n",
-    "    print(\"No GPU found\")\n"
+    "    print(\"No GPU found\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
