--- a/Pytorch/application/nlp/Transfermer_中英文翻譯/inference.ipynb
+++ b/Pytorch/application/nlp/Transfermer_中英文翻譯/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "44d3e531",
    "metadata": {},
    "outputs": [
@@ -19,6 +19,7 @@
    ],
    "source": [
     "import pickle\n",
+    "import torch\n",
     "class Tokenizer:\n",
     "    def __init__(self, vocab_path, is_en=True):\n",
     "        with open(vocab_path,'rb') as f:\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "d9432de0",
    "metadata": {},
    "outputs": [],
@@ -174,9 +175,7 @@
     "                predictions.append(word)\n",
     "                decoder_input =torch.tensor([[w_index]])\n",
     "            return \"\".join(predictions)\n",
-    "        \n",
-    "        \n",
-    "        "
+    "        \n"
    ]
   },
   {
@@ -189,14 +188,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b6212203",
+   "execution_count": 18,
+   "id": "73568566",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "def inference(sentence, en_tokenizer, cn_tokenizer, max_length=50):\n",
+    "\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "en_tokenizer = Tokenizer('./dataset/en.vec', is_en=True)\n",
+    "cn_tokenizer = Tokenizer('./dataset/ch.vec', is_en=False)\n",
+    "\n",
+    "encoder_embedding_size = 128\n",
+    "decoder_embedding_size = 128\n",
+    "hidden_size = 256\n",
+    "\n",
+    "model = Seq2Seq_Model(encoder_embedding_size, hidden_size, en_tokenizer.length(),\n",
+    "               decoder_embedding_size, hidden_size, cn_tokenizer.length(),\n",
+    "               dropout_rate=0.1)\n",
+    "\n",
+    "# 把之前訓練好的參數載入模型\n",
+    "model_weight = torch.load('model_seq2seq.pth', map_location=device)\n",
+    "model.load_state_dict(model_weight.state_dict())\n",
+    "\n",
+    "\n",
+    "def inference(sentence, en_tokenizer, cn_tokenizer, max_length=50, model=model, device=device):\n",
     "    sentence = sentence.lower()\n",
     "    with torch.no_grad():\n",
     "        en_index = en_tokenizer.encode(sentence)\n",
@@ -221,51 +240,12 @@
     "            predictions.append(word[0])\n",
     "            decoder_input = torch.tensor([[w_index]], device = device)\n",
     "#             print(word[0])\n",
-    "    return \"\".join(predictions)\n",
-    "    \n",
-    "\n"
+    "    return \"\".join(predictions)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "73568566",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device = torch.device(\"cpu\")\n",
-    "\n",
-    "en_tokenizer = Tokenizer('./dataset/en.vec', is_en=True)\n",
-    "cn_tokenizer = Tokenizer('./dataset/ch.vec', is_en=False)\n",
-    "\n",
-    "encoder_embedding_size = 128\n",
-    "decoder_embedding_size = 128\n",
-    "hidden_size = 256\n",
-    "\n",
-    "model = Seq2Seq_Model(encoder_embedding_size, hidden_size, en_tokenizer.length(),\n",
-    "               decoder_embedding_size, hidden_size, cn_tokenizer.length(),\n",
-    "               dropout_rate=0.1)\n",
-    "\n",
-    "# 把之前訓練好的參數載入模型\n",
-    "model_weight = torch.load('model_seq2seq.pth', map_location=device)\n",
-    "model.load_state_dict(model_weight.state_dict())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "e7bfef26",
    "metadata": {},
    "outputs": [
@@ -278,19 +258,19 @@
       "輸出:你好嗎？<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I am fine\n",
-      "輸出:我好像在一起之前呢。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:一个人来一杯葡萄酒。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:Check, please.\n",
-      "輸出:請結帳。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:請把票，請保住一起。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I love you.\n",
-      "輸出:我愛你。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:我爱你，你很愛。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:She studied English in the morning.\n",
-      "輸出:她在上午學習英語。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
+      "輸出:她在早上80岁早上。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n",
       "--------------------------------------------------\n",
       "輸入:I'm pretty well.\n",
-      "輸出:我身体很好。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n"
+      "輸出:我對政治好很熟悉。<EOS><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD><PAD>\n"
      ]
     }
    ],
@@ -338,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
