--- a/Pytorch/basic/GPU_pytorch.ipynb
+++ b/Pytorch/basic/GPU_pytorch.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.2.0+cu118\n",
       "GPU 0: NVIDIA GeForce RTX 3090\n",
       "-----GPU can be used-----\n",
       "Using GPU 0: NVIDIA GeForce RTX 3090\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -23,6 +35,10 @@
     "\n",
     "# Get the number of available GPUs\n",
     "num_gpus = torch.cuda.device_count()\n",
+    "\n",
+    "\n",
+    "print(torch.__version__)\n",
+    "\n",
     "\n",
     "if cuda_available:\n",
     "    # Print GPU information\n",
@@ -39,6 +55,8 @@
     "    current_gpu = torch.cuda.current_device()\n",
     "    print(\"-----GPU can be used-----\")\n",
     "    print(f\"Using GPU {current_gpu}: {torch.cuda.get_device_name(current_gpu)}\")\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
@@ -59,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
